# gdnative-rust-poc

./: .editorconfig  .gitignore  Cargo.toml  Makefile  README.md  export_presets.cfg  project.godot
.github/workflows/: build-android.yml  build-html5.yml  build-linux.yml  build-macos.yml  build-windows.yml
resources/: game.gdnlib  game.gdns  main.tscn  sprite.glsl
src/: lib.rs
src/animations/: animation.rs  animation_loader.rs  animation_manager.rs  clsn.rs  mod.rs
src/audio/: mod.rs  snd_parser.rs  sound_manager.rs  structs.rs
src/backgrounds/: background.rs  background_group.rs  background_type.rs  base_background.rs  mod.rs  static_background.rs
src/core/: app.rs  app_builder.rs  attribute_value.rs  blending.rs  configuration.rs  constants.rs  enumerations.rs  error.rs  game.rs  helpers.rs  mod.rs  plugin.rs  regex.rs  sound_id.rs  sprite_id.rs
src/drawing/: color.rs  fnt_parser.rs  font.rs  font_map.rs  mod.rs  mugen_font.rs  print_data.rs  shader_manager.rs  sprite_file.rs  sprite_manager.rs  sprite_system.rs  texture_ref.rs
src/drawing/sff/: data.rs  image.rs  lz5.rs  pcx.rs  rle5.rs  sff_common.rs  sff_parser.rs  sffv1.rs  sffv2.rs
src/elements/: element.rs
src/io/: attribute_value.rs  file_system.rs  mod.rs  text_file.rs  text_section.rs
src/menus/: menu_data.rs  menu_state.rs  mod.rs  non_combat_screen.rs  select_screen.rs  title_screen.rs
src/profiles/: mod.rs  player_profile.rs  profile_loader.rs  stage_profile.rs
src/systems/: debug.rs  input.rs  log.rs  mod.rs
src/systems/audio_server/: audio.rs  audio_server_plugin.rs  mod.rs
src/systems/backgrounds/: background_plugin.rs  events.rs  mod.rs
src/systems/menu/: components.rs  load_menus.rs  menu_plugin.rs  mod.rs  select_screen_systems.rs  setup_layers.rs  show_screen.rs  show_title_screen.rs  title_screen_systems.rs
src/systems/visual_server/: canvas_item.rs  enumerations.rs  material.rs  mesh_2d.rs  mod.rs  root_node.rs  shader.rs  sprite.rs  texture.rs  time.rs  transform.rs  visual_server_plugin.rs
src/systems/visual_server/text/: bitmap_font.rs  common.rs  font.rs  font_loader.rs  mod.rs  text_plugin.rs  text_renderer.rs  vector_font.rs
