[package]
name = "game"
version = "1.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[profile.release]
debug = true
opt-level = 3
lto = true

[dependencies]
bevy_core = "0.5.0"
bevy_app = "0.5.0"
bevy_ecs = "0.5.0"
gdnative = "0.9"
byteorder = "1.4.3"
enum-flags = "0.1.8"
regex = "1"
ab_glyph = "0.2.12"
